modify solution - add payment retry capability - update supporting docs - add more unit tests - simplify solution