@@ -4,15 +4,16 @@ import com.ontop.wallet.domain.enums.TransferStatus;
 import com.ontop.wallet.domain.valueobject.Id;
 import com.ontop.wallet.domain.valueobject.Money;
 import com.ontop.wallet.domain.valueobject.AccountNumber;
-import com.ontop.wallet.domain.valueobject.PaymentTransactionId;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.NonNull;
 import org.springframework.util.Assert;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.Currency;
 import java.util.List;
+
 
 @Getter
 public class Transfer extends BaseModel<Transfer> {
@@ -22,14 +23,12 @@ public class Transfer extends BaseModel<Transfer> {
     private final Money transferAmount;
     private final Currency currency;
     private TransferStatus status;
-
-    private PaymentTransactionId paymentTransactionId;
+    private final List<Payment> payments;
     private final List<WalletTransaction> walletTransactions;
 
     @Builder(builderMethodName = "transfer")
     private Transfer(
             Id<Transfer> id,
-            PaymentTransactionId paymentTransactionId,
             Instant created,
             Instant updated,
             @NonNull AccountNumber ontopAccountNumber,
@@ -38,10 +37,10 @@ public class Transfer extends BaseModel<Transfer> {
             @NonNull Money transferAmount,
             @NonNull Currency currency,
             @NonNull TransferStatus status,
-            @NonNull List<WalletTransaction> walletTransactions
+            @NonNull List<WalletTransaction> walletTransactions,
+            @NonNull List<Payment> payments
     ) {
         super(id, created, updated);
-        this.paymentTransactionId = paymentTransactionId;
         this.ontopAccountNumber = ontopAccountNumber;
         this.targetAccount = targetAccount;
         this.transferCharge = transferCharge;
@@ -49,23 +48,24 @@ public class Transfer extends BaseModel<Transfer> {
         this.currency = currency;
         this.status = status;
         this.walletTransactions = walletTransactions;
+        this.payments = payments;
     }
 
     public void recordPayment(@NonNull Payment payment) {
         Assert.isTrue(paymentNotMade(), "expected payment not made yet");
-        if (payment.transactionId() != null) {
-            this.paymentTransactionId = new PaymentTransactionId(payment.transactionId());
-        }
-        this.status = payment.status().toTransferStatus();
+        Assert.isTrue(payment.isCurrent(), "expected new payment to be the current");
+        this.payments.forEach(Payment::notCurrent);
+        this.payments.add(payment);
     }
 
     public void reverseWith(@NonNull WalletTransaction transaction) {
-        Assert.isTrue(transaction.isRefund(), "expected a refund");
-        this.status = TransferStatus.REVERTED;
+        Assert.isTrue(transaction.isRefund(), "expected transaction to be a refund");
+        Assert.isTrue(isValidStateForReversal(), "expected valid state for reversal");
+        this.status = TransferStatus.REVERSED;
         this.walletTransactions.add(transaction);
     }
 
-    private boolean isInitialisedState() {
+    private boolean isInitialised() {
         return TransferStatus.INITIALIZED.equals(this.status);
     }
 
@@ -75,18 +75,20 @@ public class Transfer extends BaseModel<Transfer> {
     }
 
     private boolean paymentNotMade() {
-        return this.paymentTransactionId() == null;
+        return this.payments.isEmpty() ||
+                this.payments.stream().allMatch(Payment::isFailed);
     }
 
-    public boolean isValidStateForProcessing() {
-        return isInitialisedState() &&
+    public boolean isValidStateForPayment() {
+        return isInitialised() &&
                 hasOnlyOneWalletTransactionAndItIsWithdrawal() &&
                 paymentNotMade();
     }
 
-    public boolean isValidStateForRevert() {
+    public boolean isValidStateForReversal() {
         return isFailed() &&
-                hasOnlyOneWalletTransactionAndItIsWithdrawal();
+                hasOnlyOneWalletTransactionAndItIsWithdrawal() &&
+                paymentNotMade();
     }
 
     public WalletTransaction getWithdrawal() {
@@ -95,12 +97,19 @@ public class Transfer extends BaseModel<Transfer> {
                 .findFirst().get();
     }
 
+    public Payment currentPayment() {
+        return this.payments.stream()
+                .filter(Payment::isCurrent)
+                .findFirst()
+                .get();
+    }
+
     public boolean isFailed() {
         return TransferStatus.FAILED.equals(this.status);
     }
 
-    public boolean stateIsUnknown() {
-        return TransferStatus.UNKNOWN.equals(this.status);
+    public void toProcessingState() {
+        this.status = TransferStatus.PROCESSING;
     }
 
     public void toFailedState() {
@@ -121,9 +130,12 @@ public class Transfer extends BaseModel<Transfer> {
             @NonNull TransferStatus status,
             @NonNull WalletTransaction walletTransactions
     ) {
+        Assert.isTrue(walletTransactions.isWithdrawal(), "expected transaction to be a withdrawal");
         return new Transfer(
-                null, null, created, created,
+                null, created, created,
                 ontopAccountNumber, targetAccount, transferCharge,
-                transferAmount, currency, status, List.of(walletTransactions));
+                transferAmount, currency, status, List.of(walletTransactions),
+                Collections.emptyList()
+        );
     }
 }
